# july-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
src/july_analysis/: __init__.py  cli.py  groupings.py  io.py  plots.py  report.py  runs.py  schema.py  world_state.py
src/july_analysis/configs/: groupings.yaml
src/july_analysis/metrics/: __init__.py  encounters.py  epi.py  network.py  profile.py  sex_stats.py  transmission.py
src/july_analysis/templates/: report.html
tests/: test_smoke.py
